# jsonfunc

./: CMakeLists.txt  format-term.cpp  git.cpp  git.h  json.cpp  json.h  jsonfunc.cpp  jsonfunc.sln  jsonfunc.vcxproj  jsonfunc.vcxproj.filters  mingw.cmake
.github/workflows/: build.yml
src/: format-term.cpp  git.cpp  git.h  jsonfunc.cpp  jsonfunc.h  test.cpp  xml-reader.cpp  xml.cpp  xml.h
